Fix hologram entity IDs being off by 1 causing them to move on their own